cmake_minimum_required(VERSION 3.7)
project(uo)

add_subdirectory(uo_macro)
add_subdirectory(uo_err)
add_subdirectory(uo_buf)
add_subdirectory(uo_base64)
add_subdirectory(uo_json)
add_subdirectory(uo_mem)
add_subdirectory(uo_queue)
add_subdirectory(uo_stack)
add_subdirectory(uo_hashtbl)
add_subdirectory(uo_cb)
add_subdirectory(uo_conf)
add_subdirectory(uo_sock)
add_subdirectory(uo_io)
add_subdirectory(uo_ipc)
add_subdirectory(uo_tcpserv)
add_subdirectory(uo_jwt)
add_subdirectory(uo_httpc)
